# cpp-utils

./: CMakeLists.txt  LICENSE  README.md
src/core_util/: CMakeLists.txt  core_util.h  fixed_string.h  macros.h  types.h
src/example_project/: CMakeLists.txt  credit_card_validator.cc  credit_card_validator.h  credit_card_validator_test.cc
